--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <header class="header">
+        <nav>
+            <ul class="header_menu">
+                <li class="header_menu_item"><a href="">главная</a></li>
+                <li class="header_menu_item"><a href="">посмотреть лоты</a></li>
+                <li class="header_menu_item"><a href="">об аукционе</a></li>
+            </ul>
+        </nav>
+            <img class="logo" src="icon/logo.svg" alt="оно тебе надо">
+        <address class="addresses">
+            <ul class="addresses_link">
+                <li class="address_item"><a href="tel:+99995555555">+9 999 555 5555</a></li>
+                <li class="address_item"><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></li>
+                <li class="address_item"><a href="#0"></a>наб. Принсенграхт 263-<br>265, Амстердам</li>
+            </ul>
+        </address>
     </header>
 </body>
 </html>
