--- a/index.html
+++ b/index.html
@@ -25,5 +25,20 @@
             </ul>
         </address>
     </header>
+    <main>
+        <section class="cover">
+            <div class="cover_blakout">
+                <div class="overplay">
+                    <h1 class="h1_text align_text_left">оно</h1>
+                    <p class="h1_text align_text_center">тебе</p>
+                    <p class="h1_text align_text_right">надо</p>
+                    <div class="cover_description">
+                        <p class="cover_description-text">Аукцион вещей, в которые никто не верил</p>
+                        <button class="bet-button">Сделать ставку</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
