--- a/index.html
+++ b/index.html
@@ -25,20 +25,45 @@
             </ul>
         </address>
     </header>
-    <main>
-        <section class="cover">
-            <div class="cover_blakout">
-                <div class="overplay">
-                    <h1 class="h1_text align_text_left">оно</h1>
-                    <p class="h1_text align_text_center">тебе</p>
-                    <p class="h1_text align_text_right">надо</p>
-                    <div class="cover_description">
-                        <p class="cover_description-text">Аукцион вещей, в которые никто не верил</p>
-                        <button class="bet-button">Сделать ставку</button>
-                    </div>
+    <main class="cover">
+        <div class="blakout">
+            <div class="overplay">
+                <h1 class="h1_text align_text_left">оно</h1>
+                <p class="h1_text align_text_center">тебе</p>
+                <p class="h1_text align_text_right">надо</p>
+                <div class="cover_description">
+                    <p class="cover_description-text">Аукцион вещей, в которые никто не верил</p>
+                    <button class="bet-button">Сделать ставку</button>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
+    <section class="lots">
+        <h2 class="lots_heading">лоты</h2>
+        <ul class="lots__card-list">
+            <li class="card card_type_film">
+                <div class="blakout">
+                    <a href="#0" class="card__title">Фильм режиссёра, который бросил киношколу</a>
+                    <div class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?</div>
+                </div>
+            </li>
+            <li class="card card_type_book">
+                <div class="blakout">
+                    <a href="#0" class="card__title">Книга, где описан один скучный день из жизни рекламного агента</a>
+                    <div class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</div>
+                </div>
+            </li>
+            <li class="card_type_picture">
+                <div class="blakout">
+                    <a href="#0" class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+                    <div class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</div>
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
