сделал section lots

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</div>
                 </div>
             </li>
-            <li class="card_type_picture">
+            <li class="card card_type_picture">
                 <div class="blakout">
                     <a href="#0" class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</a>
                     <div class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -64,6 +64,7 @@
                 </div>
             </li>
         </ul>
+        <a href="#0" class="lots__look-more-link">посмотреть больше</a>
     </section>
 </body>
 </html>
