--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="about__column">
             <h3 class="about_title">Об аукционе</h3>
-            <p class="about_text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были
+            <p class="about_text about__margin">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были
             попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже
             ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
             <p class="about_text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые
